--- a/example/public/assets/css/styles.css
+++ b/example/public/assets/css/styles.css
@@ -2,4 +2,82 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, #root, #outer-container {
+    height: 100%;
+}
+
+body {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+}
+
+#page-wrap {
+    background-color: #B7E0FF;
+    height: 100%;
+    text-align: center;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+h1 {
+    font-size: 3em;
+    margin-block-start: 50px;
+}
+
+a {
+    text-decoration: none;
+}
+
+h1 a {
+    color: #303841;
+}
+
+h1 a:hover {
+    color: #FF7D29;
+}
+
+code {
+    background-color: #032D3C;
+    color: white;
+    padding: 15px 30px;
+    border-radius: 5px;
+}
+
+.point-gh-wrapper {
+    font-size: 20px;
+    position: absolute;
+    top: 15%;
+    left: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    animation: pulse 2s ease-in-out infinite alternate;
+}
+
+.point-gh-wrapper .point-arrow {
+    width: 1.5em;
+    height: 1.5em;
+    transform: rotate(360deg) scaleX(-1);
+}
+
+.point-gh-wrapper p {
+    font-size: .6em;
+    width: 50%;
+    text-align: center;
+}
+
+@keyframes pulse {
+    from {
+        transform: rotate(15deg) scale(1);
+    } to {
+        transform: rotate(15deg) scale(1.1);
+    }
 }
